--- a/kontakty.html
+++ b/kontakty.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="kontakty.css">
 </head>
 <body>
-    
+
     <h1>Ochrana oceanu</h1><hr>
 
     <a class="prvni" href="index.html">Hlavni strana</a>
 
-    <a class="druhy" href="kontakty.html">Kontakty</a>
+    <a class="druhz" href="kontakty.html">Kontakty</a>
 
     <a class="treti" href="registrace.html">Registrace</a><hr>
 
+    <h2>Kde nas najdete</h2>
 
 
+    <h2>Kdy nas tam najdete</h2>
 
 
-    <p>
-jlkjljlkjlkjlkjlkjkljlkj
-
-
-
-    </p>
 </body>
 </html>
