--- a/index.html
+++ b/index.html
@@ -1,49 +1,40 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Ochrana životního prostředí</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+    <meta charset="UTF-8">
+    <title>David Macek</title>
+    <link rel="stylesheet" href="main.css">
 </head>
-
 <body>
-<h1>Ochrana yivotniho prostredi</h1>
-<!-- Add your site or application content here -->
-<p>HAHOJ apak sa mate pane Hans</p>
-<script src="js/vendor/modernizr-3.11.2.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<header>
+    <img src="images/logo.png" alt="logo">
 
-<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<script>
-  window.ga = function () {
-    ga.q.push(arguments)
-  };
-  ga.q = [];
-  ga.l = +new Date;
-  ga('create', 'UA-XXXXX-Y', 'auto');
-  ga('set', 'anonymizeIp', true);
-  ga('set', 'transport', 'beacon');
-  ga('send', 'pageview')
-</script>
-<script src="https://www.google-analytics.com/analytics.js" async></script>
+    <a href="prvnistrana/j/kontakty.html">KONTAKTY</a>
+    <a href="../prvnistrana/tema.html">CIM SE ZABYVAME</a>
+
+
+
+</header>
+
+<main>
+
+    <img src="images/reef.png" alt="ocean">
+    <h1>Novinky</h1>
+    <p> bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla
+        ba<br>.bab snadb ashfdg yfdsgtfsdy fghdsgfd gdf jh fgsdjh gf shf sfs <br>ghjfgds jfhgfeyrf jfg sjfd fdjgfsdf dshgf jhg
+        hgreuy gs fgsdf g dhfgdflfg fhfg d sdgffgyefugd sgdf gsd fsd fg
+    </p>
+
+
+
+</main>
+
+<footer>
+    <a href="https://www.instagram.com/">Instagram</a>
+    <a href="https://www.facebook.com/">Facebook</a>
+
+</footer>
+
+
 </body>
-
 </html>
