--- a/prispevek.html
+++ b/prispevek.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>David Macek</title>
     <link rel="stylesheet" href="main.css">
+    <title>Title</title>
 </head>
 <body>
+
 <header>
 
     <img src="images/logo.png" alt="logo">
@@ -31,15 +32,8 @@
 
 <main>
 
-    <img src="images/reef.png" alt="ocean">
 
-    <div class="clearfix"></div>
 
-    <h1>Novinky</h1>
-    <p> bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla
-        ba<br>.bab snadb ashfdg yfdsgtfsdy fghdsgfd gdf jh fgsdjh gf shf sfs <br>pokud mate zajem, muyete prispivat  <a href="prispevek.html">zde</a>
-
-    </p>
 
 
 
@@ -50,7 +44,6 @@
     <a href="https://www.facebook.com/">Facebook</a>
 
 </footer>
-
 
 </body>
 </html>
