--- a/ohrozene.html
+++ b/ohrozene.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>David Macek</title>
+    <title>Title</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
 <header>
-
     <img src="images/logo.png" alt="logo">
-
-
-
 
     <h1 id="nadpis">Ochrana zivotniho prostredi</h1>
 
@@ -20,26 +17,40 @@
             <li><a href="index.html">HLAVNI STRANA</a></li>
             <li><a href="cim.html">CIM SE ZABYVAME</a></li>
             <li><a href="ohrozene.html">OHROZENE DRUHY</a></li>
-
         </ul>
 
     </nav>
-
-    <div class="clearfix"></div>
 
 </header>
 
 <main>
 
-    <img src="images/reef.png" alt="ocean">
+    <table>
+        <th>Nazev druhu</th>
+        <th>Stupen ohrozeni</th>
+            <tr>
+                <td>Vorvan</td>
+                <td>silne</td>
+            </tr>
 
-    <div class="clearfix"></div>
+            <tr>
+                <td>b</td>
+                <td>kl</td>
+            </tr>
 
-    <h1>Novinky</h1>
-    <p> bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla
-        ba<br>.bab snadb ashfdg yfdsgtfsdy fghdsgfd gdf jh fgsdjh gf shf sfs <br>pokud mate zajem, muyete prispivat  <a href="prispevek.html">zde</a>
+            <tr>
+                <td>hk</td>
+                <td>fghfgh</td>
 
-    </p>
+            </tr>
+
+
+
+
+    </table>
+
+
+
 
 
 
@@ -50,6 +61,10 @@
     <a href="https://www.facebook.com/">Facebook</a>
 
 </footer>
+
+
+</body>
+
 
 
 </body>
