--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
 
     <img src="images/logo.png" alt="logo">
 
-
-
-
-    <h1 id="nadpis">Ochrana zivotniho prostredi</h1>
+    <h1 id="nadpis">Ochrana Oceánů</h1>
 
     <nav>
         <ul>
-            <li><a href="index.html">HLAVNI STRANA</a></li>
-            <li><a href="cim.html">CIM SE ZABYVAME</a></li>
-            <li><a href="ohrozene.html">OHROZENE DRUHY</a></li>
+            <li><a href="index.html">HLAVNÍ STRANA</a></li>
+            <li><a href="ohrozene.html">OHROŽENÉ DRUHY</a></li>
 
         </ul>
 
@@ -35,22 +31,51 @@
 
     <div class="clearfix"></div>
 
-    <h1>Novinky</h1>
-    <p> bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla ba.bla bla bla bla
-        ba<br>.bab snadb ashfdg yfdsgtfsdy fghdsgfd gdf jh fgsdjh gf shf sfs <br>pokud mate zajem, muyete prispivat  <a href="prispevek.html">zde</a>
+    <h1>Oceány v ohrožení</h1>
+<div id="text">
+    <p>
+        Zamysleli jse se někdy nad tím, odkud pochází váš tuňák nejmenované značky Riomare? Z oceánu samozřejmě. A víte
+        v čem vaše večeře plavala než se dostala k vám na talíř?<br> V koktejlu mikroplastů, chemikálií z farem a
+        odpadků! A
+        víte že kromě vašeho tuňáka se do sítí chytí i tisíce jiných ryb které sice nejsou určeny k spotřebě, ale zpět
+        do moře je nevypustí a tak zahynou.<br> Pořád máte chuť na tuňáka?<br>
 
-    </p>
+        Teď možná přemýšlíte jak takovéto devastaci oceánů zamezit. Není to tak složité.
+    </p><br>
 
+    <ul>
+        <li class="s">Snažte se používat obaly, které jenom tak nevyhodíte a pokud ano, alespoň je vhoďte do
+            správného kontejneru.
+        </li>
 
+        <li class="s">Kupujte zeleninu a zeleninu z bio-farem či ještě lépe, pokud máte možnost, vypěstujte si je
+            sami.
+        </li>
+
+        <li class="s">Radši než jezdit autem, choďte pěšky, skleníkové plyny mají za následek zvyšování teploty
+            oceánu a úhyn např.
+            korálových útesů.
+        </li>
+
+        <li class="s">Nepodporujte chov ryb v obřích farmách. Jednak jsou ryby zde chované plné parazitů, ale také
+            spotřebují spustu
+            potravy a valná část jich stejně uhyne.
+        </li>
+
+        <li class="s">Takhle bych mohl pokračovat dále, ale Vy to již jistě chápete. Snažte se dodržovat tato
+            pravidla ať našim dětem
+            z planety Země také něco zbyde.
+        </li>
+    </ul>
+</div>
 
 </main>
 
 <footer>
-    <a href="https://www.instagram.com/">Instagram</a>
-    <a href="https://www.facebook.com/">Facebook</a>
+    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+    <a href="https://www.facebook.com/" target="_blank">Facebook</a>
 
 </footer>
-
 
 </body>
 </html>
