--- a/ohrozene.html
+++ b/ohrozene.html
@@ -10,13 +10,12 @@
 <header>
     <img src="images/logo.png" alt="logo">
 
-    <h1 id="nadpis">Ochrana zivotniho prostredi</h1>
+    <h1 id="nadpis">Ochrana Oceánů</h1>
 
     <nav>
         <ul>
-            <li><a href="index.html">HLAVNI STRANA</a></li>
-            <li><a href="cim.html">CIM SE ZABYVAME</a></li>
-            <li><a href="ohrozene.html">OHROZENE DRUHY</a></li>
+            <li><a href="index.html">HLAVNÍ STRANA</a></li>
+            <li><a href="ohrozene.html">OHROŽENÉ DRUHY</a></li>
         </ul>
 
     </nav>
@@ -27,32 +26,36 @@
 
     <table>
         <th>Nazev druhu</th>
-        <th>Stupen ohrozeni</th>
+        <th>Stupeň ohrožení</th>
             <tr>
-                <td>Vorvan</td>
+                <td>Žralok obrovský</td>
                 <td>silne</td>
             </tr>
 
             <tr>
-                <td>b</td>
+                <td>Kareta pravá</td>
                 <td>kl</td>
             </tr>
 
             <tr>
-                <td>hk</td>
+                <td>Mořská vydra</td>
                 <td>fghfgh</td>
 
             </tr>
 
+            <tr>
+                <td>Vaquita</td>
+                <td>d</td>
+            </tr>
+
+            <tr>
+                <td>Plejtvák obrovský</td>
+                <td>d</td>
+            </tr>
 
 
 
     </table>
-
-
-
-
-
 
 </main>
 
