--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">HLAVNÍ STRANA</a></li>
-            <li><a href="ohrozene.html">OHROŽENÉ DRUHY</a></li>
+            <li class="nav"><a href="index.html">HLAVNÍ STRANA</a></li>
+            <li class="nav"><a href="ohrozene.html">OHROŽENÉ DRUHY</a></li>
 
         </ul>
 
@@ -27,7 +27,6 @@
 
 <main>
 
-    <img src="images/reef.png" alt="ocean">
 
     <div class="clearfix"></div>
 
@@ -44,7 +43,7 @@
     </p><br>
 
     <ul>
-        <li class="s">Snažte se používat obaly, které jenom tak nevyhodíte a pokud ano, alespoň je vhoďte do
+        <li>Snažte se používat obaly, které jenom tak nevyhodíte a pokud ano, alespoň je vhoďte do
             správného kontejneru.
         </li>
 
