--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <h1 id="nadpis">Ochrana Oceánů</h1>
 
+    <div class="clearfix"></div>
     <nav>
         <ul>
             <li class="nav"><a href="index.html">HLAVNÍ STRANA</a></li>
             <li class="nav"><a href="ohrozene.html">OHROŽENÉ DRUHY</a></li>
-
         </ul>
 
     </nav>
@@ -70,11 +70,6 @@
 
 </main>
 
-<footer>
-    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-    <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-
-</footer>
 
 </body>
 </html>
